ralph: iteration 1 — 2026-04-09 23:38:34